functional links for popular menu. content placeholder. clean up section header top spacing. overlay fixed but now changes text color too.

--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,6 @@
     /* font-families */
     --ff-serif: "Fugaz One", serif;
     --ff-sans: "Comfortaa Variable", sans-serif;
-    --ff-sans-normal: "Prosto One", sans-serif;
   }
   
   
@@ -64,7 +63,7 @@
   
   /* Body Set */
   body {
-    font-family: var(--ff-sans-normal);
+    font-family: var(--ff-sans);
     font-size: var(--fs-400);
     color: hsl(var(--color-light));
     background-repeat: no-repeat;
@@ -183,9 +182,6 @@
   .ff-sans {
     font-family: var(--ff-sans);
   }
-  .ff-sans-normal {
-    font-family: var(--ff-sans-normal);
-  }
   
   .letter-spacing-1 {
     letter-spacing: 4.75px;
@@ -231,21 +227,6 @@
   .fs-700,
   .fs-600 {
     line-height: 1.1;
-  }
-  
-  .numbered-title {
-    font-family: var(--ff-sans-normal);
-    font-size: var(--fs-500);
-    text-transform: uppercase;
-    letter-spacing: 4.72px;
-  }
-  
-  
-  /* save from using an extra class name */
-  .numbered-title span {
-    margin-right: .5em;
-    font-weight: 700;
-    color: hsl( var(--color-accent));
   }
 
   /* -------------------------- */
